# julia-set-explorer

./: Makefile  README.org  jse-window.c  jse-window.h  jse.gresource.xml  julia.c  julia.h  main.c  meson.build  window.glade  window.ui
